# fe5_konsepy

./: CHANGELOG.md  README.md  VERSION.md  pyproject.toml
sample/: corpus.csv
src/: config.py  postprocess_hx_attempted_suicide.py  postprocess_smoking.py  postprocessing_smoking.py  run_all.py
src/fe5_konsepy/: __init__.py  other_subject.py  postprocess_shared.py  utils.py
src/fe5_konsepy/concepts/: smoking.py  suicide_attempt.py
templates/: test_concept_template.py
tests/: test_other_subject.py  test_smoking.py  test_suicide_attempt.py
